--- a/numpy_fundametals.ipynb
+++ b/numpy_fundametals.ipynb
@@ -24,13 +24,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "JsIIn8lpBuLz",
-        "outputId": "f5839303-47f3-4ec6-e8c6-477c8d143d48"
+        "outputId": "5e354401-8a14-49fc-bc1d-a8577248584e"
       },
       "outputs": [
         {
@@ -41,7 +41,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 29
+          "execution_count": 4
         }
       ],
       "source": [
@@ -377,7 +377,7 @@
       "metadata": {
         "id": "VxndQ-ztGOXO"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -511,19 +511,66 @@
     {
       "cell_type": "code",
       "source": [
-        "#changing inn datatypes"
+        "#changing inn datatypes\n",
+        "#astype\n",
+        "a3.dtype\n"
       ],
       "metadata": {
-        "id": "tEs7RlIDUAdh"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tEs7RlIDUAdh",
+        "outputId": "9b463809-3995-4780-8817-69e6ce312c89"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dtype('int64')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a3.astype(np.int32) # convet"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_8k0VRuZVejH",
+        "outputId": "e1f61dd9-6088-4fdd-f608-bb60455c944d"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[[0, 1],\n",
+              "        [2, 3]],\n",
+              "\n",
+              "       [[4, 5],\n",
+              "        [6, 7]]], dtype=int32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPaNH0Gnw+OgWhM7KXlrOms",
+      "authorship_tag": "ABX9TyOYVIOOtfVrJaPY+j6jB9PJ",
       "include_colab_link": true
     },
     "kernelspec": {
