--- a/numpy_fundametals.ipynb
+++ b/numpy_fundametals.ipynb
@@ -24,13 +24,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "JsIIn8lpBuLz",
-        "outputId": "5e354401-8a14-49fc-bc1d-a8577248584e"
+        "outputId": "e1e34eb4-6c8e-4296-f2b8-1bfc4c823a58"
       },
       "outputs": [
         {
@@ -41,7 +41,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 9
         }
       ],
       "source": [
@@ -377,7 +377,7 @@
       "metadata": {
         "id": "VxndQ-ztGOXO"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -522,7 +522,7 @@
         "id": "tEs7RlIDUAdh",
         "outputId": "9b463809-3995-4780-8817-69e6ce312c89"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -548,7 +548,7 @@
         "id": "_8k0VRuZVejH",
         "outputId": "e1f61dd9-6088-4fdd-f608-bb60455c944d"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -565,12 +565,133 @@
           "execution_count": 10
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Array Operations i.e all mathematical operations\n",
+        "a1 = np.arange(12).reshape(3,4)\n",
+        "a2 = np.arange(12,24).reshape(3,4)\n",
+        "\n",
+        "a2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "G07Ghi2dPLPd",
+        "outputId": "b782e061-8bb5-457b-f0e9-48f73528fe92"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[12, 13, 14, 15],\n",
+              "       [16, 17, 18, 19],\n",
+              "       [20, 21, 22, 23]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#two types of operation\n",
+        "#scalar operation and vector operarions\n",
+        "#1 Scalar Operations\n",
+        "\n",
+        "a1 * a2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gv6ZE72zThFc",
+        "outputId": "95119c17-129c-4925-ef84-afbdb2ae530a"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[  0,  13,  28,  45],\n",
+              "       [ 64,  85, 108, 133],\n",
+              "       [160, 189, 220, 253]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a1 + a2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fcbR5CdwTyfb",
+        "outputId": "e37607a6-1298-4bb0-84f3-528e8d0f06d7"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[12, 14, 16, 18],\n",
+              "       [20, 22, 24, 26],\n",
+              "       [28, 30, 32, 34]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# relational operators\n",
+        "a2 > 5"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IpbamXKoT1xJ",
+        "outputId": "236cb9a1-e76e-4edd-b142-7d3db233a31a"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ True,  True,  True,  True],\n",
+              "       [ True,  True,  True,  True],\n",
+              "       [ True,  True,  True,  True]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOYVIOOtfVrJaPY+j6jB9PJ",
+      "authorship_tag": "ABX9TyPnmIT5LxxLCFTiSMcoDEJI",
       "include_colab_link": true
     },
     "kernelspec": {
