--- a/numpy_fundametals.ipynb
+++ b/numpy_fundametals.ipynb
@@ -686,12 +686,160 @@
           "execution_count": 14
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#2 Vector <operations\n",
+        "a1 +a2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_u9Q3eeoUGrZ",
+        "outputId": "e378a533-f40d-4e5d-ebb7-546d316961f5"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[12, 14, 16, 18],\n",
+              "       [20, 22, 24, 26],\n",
+              "       [28, 30, 32, 34]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Array Functions\n",
+        "a1 = np.random.random((3,3))\n",
+        "a1 = np.round(a1*100)\n",
+        "\n",
+        "a1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9dka2S5IUOyB",
+        "outputId": "708c373c-7014-4ca2-a8e4-bf457abbd124"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[64., 17., 35.],\n",
+              "       [11., 49., 31.],\n",
+              "       [95., 60., 49.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.max(a1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Cu0oWoFlUlfj",
+        "outputId": "234aef26-c224-4661-a19c-01f4cdd444b3"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "95.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.min(a1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2JP3h8NFUna6",
+        "outputId": "dc5cb63d-ad0a-4603-f343-aaf86dc15f17"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "11.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.sum(a1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "w3dqr9SZUq_5",
+        "outputId": "7992d4f5-af1e-4af3-a60f-a939237b0e1a"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "411.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "QwoWIKvKUuLC"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPnmIT5LxxLCFTiSMcoDEJI",
+      "authorship_tag": "ABX9TyOpuaphUgWcTu4VR9UtcmCN",
       "include_colab_link": true
     },
     "kernelspec": {
