--- a/numpy_fundametals.ipynb
+++ b/numpy_fundametals.ipynb
@@ -24,13 +24,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "JsIIn8lpBuLz",
-        "outputId": "e1e34eb4-6c8e-4296-f2b8-1bfc4c823a58"
+        "outputId": "bb8c0a67-6486-4923-f3d4-00f4570e2d11"
       },
       "outputs": [
         {
@@ -41,7 +41,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 1
         }
       ],
       "source": [
@@ -580,9 +580,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "G07Ghi2dPLPd",
-        "outputId": "b782e061-8bb5-457b-f0e9-48f73528fe92"
+        "outputId": "dc40c968-6599-4d62-d49b-68f49b93a75a"
       },
-      "execution_count": 10,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -594,7 +594,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 3
         }
       ]
     },
@@ -828,18 +828,221 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# 0= col\n",
+        "# 1= row\n",
+        "np.max(a1, axis= 1)"
+      ],
       "metadata": {
-        "id": "QwoWIKvKUuLC"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QwoWIKvKUuLC",
+        "outputId": "10bc4137-f827-43bb-89ff-84bb97d097df"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 3,  7, 11])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.max(a1, axis = 0)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9G8W4wEUG8FT",
+        "outputId": "f621ce49-3949-4a2c-c71a-9bfd22ed49fb"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 8,  9, 10, 11])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#statstic\n",
+        "#mean/ median/standard deviation/ var\n",
+        "np.mean(a1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "D--KgtTOHBHW",
+        "outputId": "8ee75597-a208-4751-9a5b-97a4075c9e97"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5.5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.mean(a1, axis = 0)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HqCowI9yHVOm",
+        "outputId": "ec5bef4f-88bb-49fe-de54-009d13f547cb"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([4., 5., 6., 7.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.mean(a2, axis = 1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "t5rQRDlfHZNG",
+        "outputId": "83a210da-9ee2-41da-a7b0-cc7e96f8b7ec"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([13.5, 17.5, 21.5])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.median(a1, axis=1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "O1aVpActHdue",
+        "outputId": "94158cd8-c90d-455e-b447-4df0d7bd0803"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1.5, 5.5, 9.5])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.std(a1, axis=1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ly1NlhIsHrJr",
+        "outputId": "a7ef7f21-3073-4b7d-e225-299d1fe0bc21"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1.11803399, 1.11803399, 1.11803399])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.var(a1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PPZun33mHvvb",
+        "outputId": "a55bd6b7-888b-43ed-d5a8-3befcfd407b9"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "11.916666666666666"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOpuaphUgWcTu4VR9UtcmCN",
+      "authorship_tag": "ABX9TyMDEtdYNxN1oAvqYs2C6zzf",
       "include_colab_link": true
     },
     "kernelspec": {
