--- a/numpy_fundametals.ipynb
+++ b/numpy_fundametals.ipynb
@@ -1037,12 +1037,258 @@
           "execution_count": 12
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#dot-product\n",
+        "# eg 2 metrix ko product same if (2,3) shoud (3,2)\n",
+        "\n",
+        "a2 = np.arange(12).reshape(3,4)\n",
+        "a3 = np.arange(12,24).reshape(4,3)\n"
+      ],
+      "metadata": {
+        "id": "t9g_6WM0H6rR"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.dot(a2,a3)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Mp6eOgp7H6OK",
+        "outputId": "50a6d815-629f-406a-94f5-de885b321e8f"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[114, 120, 126],\n",
+              "       [378, 400, 422],\n",
+              "       [642, 680, 718]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#log and exponents\n",
+        "a1\n",
+        "np.log(a1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "M_2-gVYYIphp",
+        "outputId": "699eb559-8619-48b3-bde1-0742f5f4034b"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-21-87743887e068>:3: RuntimeWarning: divide by zero encountered in log\n",
+            "  np.log(a1)\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[      -inf, 0.        , 0.69314718, 1.09861229],\n",
+              "       [1.38629436, 1.60943791, 1.79175947, 1.94591015],\n",
+              "       [2.07944154, 2.19722458, 2.30258509, 2.39789527]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.exp(a1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gdhQoZlpI4JJ",
+        "outputId": "3a3c8e29-6d47-4250-be02-e46e492652c2"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1.00000000e+00, 2.71828183e+00, 7.38905610e+00, 2.00855369e+01],\n",
+              "       [5.45981500e+01, 1.48413159e+02, 4.03428793e+02, 1.09663316e+03],\n",
+              "       [2.98095799e+03, 8.10308393e+03, 2.20264658e+04, 5.98741417e+04]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#round/floor/ceil\n",
+        "np.random.random((2,3))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZgJ5uU1QI9jt",
+        "outputId": "afc5fea2-72e8-41f8-df0b-39bdb68f4bc9"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0.45496645, 0.94027857, 0.34209856],\n",
+              "       [0.50853108, 0.58791946, 0.03598865]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.random.random((2,3))*100"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nJyo48f2JK3_",
+        "outputId": "6b2db676-ad79-4d21-9e77-c8e1d3aeefcd"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[13.34954562, 52.59754144, 69.08988784],\n",
+              "       [76.96659975, 36.24799537, 35.11980535]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#for integer we use round\n",
+        "np.round(np.random.random((2,3))*100)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4AwXGUXOJU8B",
+        "outputId": "336ea5d3-726f-4d4b-e57c-3fb7f124d322"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[72., 74., 10.],\n",
+              "       [86., 19., 24.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.floor(np.random.random((2,4))*100)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1PXX4ohiJroG",
+        "outputId": "7be0d80a-0005-4df9-bbaf-f06e58976d84"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[65., 78., 99.,  0.],\n",
+              "       [90., 54., 19., 85.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.ceil(np.random.random((2,3))*100)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bYzW63-7J3s0",
+        "outputId": "397f793f-3c69-40f2-f812-7d82cdf87a1d"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 48.,  40., 100.],\n",
+              "       [ 43.,  70.,  40.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMDEtdYNxN1oAvqYs2C6zzf",
+      "authorship_tag": "ABX9TyM/GMBpUspAAIqgL4fjp6bW",
       "include_colab_link": true
     },
     "kernelspec": {
