--- a/numpy_fundametals.ipynb
+++ b/numpy_fundametals.ipynb
@@ -24,13 +24,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "JsIIn8lpBuLz",
-        "outputId": "bb8c0a67-6486-4923-f3d4-00f4570e2d11"
+        "outputId": "edd837f2-633c-4f69-b004-002df62e510a"
       },
       "outputs": [
         {
@@ -41,7 +41,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 2
         }
       ],
       "source": [
@@ -1283,12 +1283,192 @@
           "execution_count": 29
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Indexing and slicing\n",
+        "a1 = np.arange(10)\n",
+        "a2 = np.arange(12).reshape(3,4)\n",
+        "a3 = np.arange(8).reshape(2,2,2)\n",
+        "\n",
+        "a2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1iLkMh4xtfaS",
+        "outputId": "5f9fc091-33ff-46ca-d6b2-c4e667ec665c"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 0,  1,  2,  3],\n",
+              "       [ 4,  5,  6,  7],\n",
+              "       [ 8,  9, 10, 11]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Indexing\n",
+        "# a1[0]\n",
+        "a1[1]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UBhFlpoWt5TN",
+        "outputId": "9d510d2b-94a6-48bd-f4db-283b94ddd916"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 2D\n",
+        "a2[1,3]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OF3ewpWluHyp",
+        "outputId": "b8c653a8-f46a-49e3-b7ff-3866cb186737"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "7"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 3D\n",
+        "a3"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FyZpJ0xhutVE",
+        "outputId": "8d3b2ec4-e472-4b07-f0cf-fec5bed4a3a5"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[[0, 1],\n",
+              "        [2, 3]],\n",
+              "\n",
+              "       [[4, 5],\n",
+              "        [6, 7]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a3[0,0,1]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yV9yFfo9uzR2",
+        "outputId": "b983cae7-9ac3-4932-88d1-0c1717c48b40"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a3[1,1,0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eCyDTQMgvIDM",
+        "outputId": "9ce96c78-fc73-42a3-e55b-8dc7a09132e9"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "6"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "-bnu9FDyvYkY"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM/GMBpUspAAIqgL4fjp6bW",
+      "authorship_tag": "ABX9TyOWob68hED/cxTZPz4qoHpq",
       "include_colab_link": true
     },
     "kernelspec": {
