--- a/14_Numpy_Advanced.ipynb
+++ b/14_Numpy_Advanced.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOdJxp5tBVBKdGiYi05UO+8",
+      "authorship_tag": "ABX9TyP1/0oEw4FgamLP+oUn7uYR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,11 @@
         "id": "fNlsqXkYW2kT"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "# Numpy vs Array List\n",
+        "#numpy is 50 timesfaster than python list\n",
+        "\n"
+      ]
     }
   ]
 }
