--- a/14_Numpy_Advanced.ipynb
+++ b/14_Numpy_Advanced.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMduz8iwKszuDzEJOPjZCBp",
+      "authorship_tag": "ABX9TyPp6lHrZIVvj/4fpDesH9Ro",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
       "metadata": {
         "id": "wbbta7A8cxkb"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -54,8 +54,7 @@
       "cell_type": "code",
       "source": [
         "#Advance Indexing\n",
-        "a = np.array(12).reshape(4,3)\n",
-        "a"
+        "a = np.array(12).reshape(4,3)\n"
       ],
       "metadata": {
         "colab": {
@@ -65,7 +64,7 @@
         "id": "SKYthHR_ccZA",
         "outputId": "5ca6cd84-10e2-4ca8-93c7-81573a9924e2"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
