--- a/14_Numpy_Advanced.ipynb
+++ b/14_Numpy_Advanced.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPp6lHrZIVvj/4fpDesH9Ro",
+      "authorship_tag": "ABX9TyP+XFN2+Juavngv3a9dXJNU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,7 +54,10 @@
       "cell_type": "code",
       "source": [
         "#Advance Indexing\n",
-        "a = np.array(12).reshape(4,3)\n"
+        "a = np.array(12).reshape(4,3)\n",
+        "\n",
+        "\n",
+        "a"
       ],
       "metadata": {
         "colab": {
