--- a/14_Numpy_Advanced.ipynb
+++ b/14_Numpy_Advanced.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP+XFN2+Juavngv3a9dXJNU",
+      "authorship_tag": "ABX9TyPwj3ORmkO2jBPK+Od6k7dx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -81,6 +81,28 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#fancy indecxing\n"
+      ],
+      "metadata": {
+        "id": "UOCzl73YpsC4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#boolean indexing"
+      ],
+      "metadata": {
+        "id": "HP-K5jlUpxgO"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
