--- a/14_Numpy_Advanced.ipynb
+++ b/14_Numpy_Advanced.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPwj3ORmkO2jBPK+Od6k7dx",
+      "authorship_tag": "ABX9TyMJeoSq3kTg0zas6c4rY2yN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,12 +62,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 212
+          "height": 247
         },
         "id": "SKYthHR_ccZA",
-        "outputId": "5ca6cd84-10e2-4ca8-93c7-81573a9924e2"
+        "outputId": "7e3baae8-03f9-4da1-990b-f4338e90fb96"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "error",
@@ -76,7 +76,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-4-c6db8316728f>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Advance Indexing\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-4-2aa314ffb450>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Advance Indexing\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m12\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;31mValueError\u001b[0m: cannot reshape array of size 1 into shape (4,3)"
           ]
         }
@@ -96,13 +96,38 @@
     {
       "cell_type": "code",
       "source": [
-        "#boolean indexing"
+        "#boolean indexing\n",
+        "import numpy as np\n",
+        "\n",
+        "a = np.random.randint(1,100,24).reshape(6,4)\n",
+        "\n",
+        "a"
       ],
       "metadata": {
-        "id": "HP-K5jlUpxgO"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HP-K5jlUpxgO",
+        "outputId": "588a91fd-19dc-423b-dfea-554d844fb0af"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[23,  3, 79, 23],\n",
+              "       [38, 49,  9, 69],\n",
+              "       [11,  3, 90, 45],\n",
+              "       [36, 18, 64, 32],\n",
+              "       [18, 21, 44, 64],\n",
+              "       [43, 81, 82, 44]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
     }
   ]
 }
