--- a/14_Numpy_Advanced.ipynb
+++ b/14_Numpy_Advanced.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMJeoSq3kTg0zas6c4rY2yN",
+      "authorship_tag": "ABX9TyOF8rQHnl/+7RZPImmgDk1C",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -126,6 +126,38 @@
           },
           "metadata": {},
           "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#greater tha 50\n",
+        "a>50"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "coHJU0JtvUiN",
+        "outputId": "4bcccfa6-f0ed-4f28-9022-e3460550c923"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[False, False,  True, False],\n",
+              "       [False, False, False,  True],\n",
+              "       [False, False,  True, False],\n",
+              "       [False, False,  True, False],\n",
+              "       [False, False, False,  True],\n",
+              "       [False,  True,  True, False]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
         }
       ]
     }
